feat: role ordering
